test_scores/negative_dimers/features/O60308.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/O60308.pkl.xz